fix layout issues

--- a/src/containers/Golf/scss/_box.scss
+++ b/src/containers/Golf/scss/_box.scss
@@ -10,7 +10,7 @@
 .c-detail__container {
     position: relative;
     padding: 1rem;
-    margin: 0 -1rem 1rem;
+    margin-bottom: 1rem;
     background-color: rgb(242, 235, 207);
     border-radius: 4px;
     box-shadow: 1px 2px 5px hsla(48, 29%, 43%, .4);
